@@ -2,6 +2,8 @@ ubiquity (0.99.67) UNRELEASED; urgency=low
 
   * Don't dh_install to ubiquity-frontend-{gtk,kde} if the respective
     UBIQUITY_NO_{GTK,KDE} is defined.
+  * GTK frontend:
+    - Add a crash handler UI.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 25 Apr 2006 10:46:02 +0100
 
